// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InviteModal renders with multiple properties 1`] = `
Array [
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": "modal-window__close",
        "modal": "modal-window modal-window--small invite-modal",
        "overlay": "modal-overlay",
      }
    }
    closeOnOverlayClick={true}
    focusTrapped={false}
    onClose={[Function]}
    onEntered={[Function]}
    open={true}
    styles={
      Object {
        "closeIcon": Object {
          "display": "none",
        },
      }
    }
  >
    <div
      className="modal-window__head invite-modal__header"
    >
      <div
        className="invite-modal__title"
      >
        Invite to
      </div>
      <div
        className="invite-modal__title invite-modal__title--name"
      >
         
        0 properties
      </div>
    </div>
    <div
      className="modal-window__body"
    >
      <div
        className="invite-modal__container invite-modal__container--select"
      >
        <div
          className="select-search select invite-modal__select-users select--is-multi select--transparent css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className="select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select__value-container select__value-container--is-multi css-1hwfws3"
            >
              <div
                className="select__input-with-placeholder"
              >
                <div
                  className="css-zz0hea-Input"
                >
                  <div
                    className="select__input"
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      disabled={false}
                      id="react-select-4-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "label": "input",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
                <div
                  className="select__placeholder css-1wa3eu0-placeholder"
                >
                  Name or email
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="select invite-modal__select-role select--small select--default css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className="select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select__value-container select__value-container--has-value css-1hwfws3"
            >
              <div
                className="select__single-value css-1uccc91-singleValue"
              >
                Member
              </div>
              <input
                className="css-62g3xt-dummyInput"
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                tabIndex="0"
                value=""
              />
            </div>
            <div
              className="select__indicators css-1g48xl4-IndicatorsContainer"
            >
              <span
                className="select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="select__dropdown-arrow select__dropdown-arrow--down"
                  color="inherit"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 10 5"
                  width="1em"
                >
                  <path
                    d="M1 1.16134L4.92334 4.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                  <path
                    d="M8.82812 1.16134L5 4.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  className="select__dropdown-arrow select__dropdown-arrow--up"
                  color="inherit"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 10 5"
                  width="1em"
                >
                  <path
                    d="M1 3.83866L4.92334 0.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                  <path
                    d="M8.82812 3.83866L5 0.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="invite-modal__container invite-modal__container--users"
      />
      <div
        className="invite-modal__container invite-modal__container--button"
      >
        <button
          className="button button--disabled button--uppercase button--primary invite-modal__button"
          onClick={[Function]}
        >
          invite
        </button>
      </div>
    </div>
  </Modal>,
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": "modal-window__close",
        "modal": "modal-window modal-window--small invite-remove-window",
        "overlay": "modal-overlay",
      }
    }
    closeOnOverlayClick={true}
    focusTrapped={false}
    onClose={[Function]}
    open={false}
    styles={
      Object {
        "closeIcon": Object {
          "display": "none",
        },
      }
    }
  >
    <div
      className="modal-window__head"
    >
      Are you sure?
    </div>
    <div
      className="modal-window__body invite-remove-window__body"
    >
      Removing
       
      <span
        className="invite-remove-window__name"
      />
       
      will revoke their access to this property.
      <div
        className="invite-remove-window__controls"
      >
        <button
          className="button button--uppercase button--secondary invite-remove-window__button"
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          className="button button--uppercase button--warning invite-remove-window__button"
          onClick={[Function]}
        >
          Remove
        </button>
      </div>
    </div>
  </Modal>,
]
`;

exports[`InviteModal renders with single properties 1`] = `
Array [
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": "modal-window__close",
        "modal": "modal-window modal-window--small invite-modal",
        "overlay": "modal-overlay",
      }
    }
    closeOnOverlayClick={true}
    focusTrapped={false}
    onClose={[Function]}
    onEntered={[Function]}
    open={true}
    styles={
      Object {
        "closeIcon": Object {
          "display": "none",
        },
      }
    }
  >
    <div
      className="modal-window__head invite-modal__header"
    >
      <div
        className="invite-modal__title"
      >
        Invite to
      </div>
      <div
        className="invite-modal__title invite-modal__title--name"
      >
         
        0 properties
      </div>
    </div>
    <div
      className="modal-window__body"
    >
      <div
        className="invite-modal__container invite-modal__container--select"
      >
        <div
          className="select-search select invite-modal__select-users select--is-multi select--transparent css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className="select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select__value-container select__value-container--is-multi css-1hwfws3"
            >
              <div
                className="select__input-with-placeholder"
              >
                <div
                  className="css-zz0hea-Input"
                >
                  <div
                    className="select__input"
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      disabled={false}
                      id="react-select-2-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "label": "input",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
                <div
                  className="select__placeholder css-1wa3eu0-placeholder"
                >
                  Name or email
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="select invite-modal__select-role select--small select--default css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className="select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select__value-container select__value-container--has-value css-1hwfws3"
            >
              <div
                className="select__single-value css-1uccc91-singleValue"
              >
                Member
              </div>
              <input
                className="css-62g3xt-dummyInput"
                disabled={false}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                tabIndex="0"
                value=""
              />
            </div>
            <div
              className="select__indicators css-1g48xl4-IndicatorsContainer"
            >
              <span
                className="select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="select__dropdown-arrow select__dropdown-arrow--down"
                  color="inherit"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 10 5"
                  width="1em"
                >
                  <path
                    d="M1 1.16134L4.92334 4.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                  <path
                    d="M8.82812 1.16134L5 4.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  className="select__dropdown-arrow select__dropdown-arrow--up"
                  color="inherit"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 10 5"
                  width="1em"
                >
                  <path
                    d="M1 3.83866L4.92334 0.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                  <path
                    d="M8.82812 3.83866L5 0.5"
                    stroke="currentColor"
                    strokeLinecap="round"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="invite-modal__container invite-modal__container--users"
      />
      <div
        className="invite-modal__container invite-modal__container--button"
      >
        <button
          className="button button--disabled button--uppercase button--primary invite-modal__button"
          onClick={[Function]}
        >
          invite
        </button>
      </div>
    </div>
  </Modal>,
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": "modal-window__close",
        "modal": "modal-window modal-window--small invite-remove-window",
        "overlay": "modal-overlay",
      }
    }
    closeOnOverlayClick={true}
    focusTrapped={false}
    onClose={[Function]}
    open={false}
    styles={
      Object {
        "closeIcon": Object {
          "display": "none",
        },
      }
    }
  >
    <div
      className="modal-window__head"
    >
      Are you sure?
    </div>
    <div
      className="modal-window__body invite-remove-window__body"
    >
      Removing
       
      <span
        className="invite-remove-window__name"
      />
       
      will revoke their access to this property.
      <div
        className="invite-remove-window__controls"
      >
        <button
          className="button button--uppercase button--secondary invite-remove-window__button"
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          className="button button--uppercase button--warning invite-remove-window__button"
          onClick={[Function]}
        >
          Remove
        </button>
      </div>
    </div>
  </Modal>,
]
`;
